deployment/services_ns/registry/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry # Name of the deployment
  namespace: services # Name of the namespace
  labels:
    app: registry # Name of your application
spec:
  selector:
    matchLabels:
      app: registry # Name of your application
  replicas: 1 # Number of replicas
  template:
    metadata:
      labels:
        app: registry # Name of your application
    spec:
      containers:
      - name: registry
        image: registry:2
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 5000
        volumeMounts:
        - name: registry-pvc
          mountPath: /var/lib/registry
      volumes:
      - name: registry-pvc
        persistentVolumeClaim:
          claimName: registry-pvc
