deployment/services_ns/registry/service.yml
apiVersion: v1
kind: Service
metadata:
  name: registry
  namespace: services
spec:
  type: ClusterIP
  selector:
    app: registry
  ports:
  - port: 5000
    targetPort: 5000
    protocol: TCP
    name: registry
